# TripleFilterBubble

./: .TripleFilterBubble.tmp.nlogo  .gitignore  CLAUDE.md  TripleFilterBubble.nlogo  capture_netlogo_initial.nlogo  confirm.prof  debug_edges.py  debug_positions.py  example_friend_links.py  example_infolinks.py  example_plot.py  example_with_measurements.py  fastgeo.prof  fastgeo_central.prof  fastgeo_individual.prof  fastgeo_with_refriend.prof  grid.prof  integrate_infobits_optimized.prof  naive_profile.prof  no-defaultdict-optim.prof  no-refriend-optim.prof  optim-2-select-distant-infobits.prof  optim-2.prof  optimized_with_refriend.prof  post_infobits_optimized.prof  posting.prof  pyproject.toml  pytest.ini  refriend_optimized.prof  refriend_optimized_2.prof  results.json  slots.prof  with-complete-storage.prof  with-storage.prof
config/: example_params.yaml  scenario1.yaml  small_test.yaml
data/: biadj_counts_uint32.npy.zst  biadj_events.bin.zst  guy_graph_TxPackedBytes_uint8.npy.zst  guy_positions_TxNx2_int16.npy.zst  infobit_ids.npy.zst  infobits_final_int16.npy.zst  meta.npz
src/: global_params.py  main.py  metrics.py  models.py  plotter.py  utils.py
tests/: README.md  conftest.py  generate_golden_data.py  test_config.py  test_e2e.py  test_golden_regression.py  test_integration.py  test_metrics.py  test_models.py  test_simulation.py  test_utils.py
tests/fixtures/: golden_seed42_t10.json
tests/fixtures/golden_seed42_t10/: biadj_counts_uint32.npy.zst  biadj_events.bin.zst  guy_graph_TxPackedBytes_uint8.npy.zst  guy_positions_TxNx2_int16.npy.zst  meta.npz  (+2 more)
