[project]
name = "triplefilterbubble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pytest>=8.0.0",
    "scipy>=1.16.1",
    "snakeviz>=2.2.2",
    "zstandard>=0.25.0",
]
